# FM_Engine_beta

./: CMakeLists.txt  FM_Engine_beta.jucer  README.md
.github/workflows/: osx_build_universal_binary.yml  osx_juce.yml  win_osx_juce.yml  windows.yml
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: BrickWallLimiter.h  CustomCutoffSlider.h  Dial.cpp  Dial.h  InterpolatedDelay.h  LowPass.cpp  LowPass.h  PDCToggle.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Routing.cpp  Routing.h  SidewaysToggleSwitch.h  SlidingSwitch.cpp  SlidingSwitch.h
